--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -148,14 +148,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        android:background="#FF3636">
+        android:background="@color/background_red_submission">
         <TextView
             style="@style/CheckoutFooter"
             android:layout_width="wrap_content"
             android:layout_alignParentLeft="true"
             android:text="@string/submit_order"
             android:textSize="28sp"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/text_white"
             />
         <TextView
             android:id="@+id/checkout_order_total"
@@ -163,7 +163,7 @@
             android:layout_width="wrap_content"
             android:layout_alignParentRight="true"
             android:textSize="28sp"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/text_white"
             />
     </RelativeLayout>
 
