--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/profile_fragment">
-    <com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay
+    <LinearLayout
         android:id="@+id/profile_fragment_content"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -80,18 +80,5 @@
             android:id="@+id/addCCBtn"/>
     </LinearLayout>
     </LinearLayout>
-    </com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
-    <RelativeLayout
-        android:id="@+id/profile_progress_overlay"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:clickable="false"
-        android:background="#6f000022" >
-        <ProgressBar
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminateOnly="true" />
-    </RelativeLayout>
+    </LinearLayout>
 </FrameLayout>
