--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -11,36 +11,41 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <!--free shipping message-->
         <TextView
             android:id="@+id/free_shipping_msg"
             android:layout_width="match_parent"
             style="@style/CartHeader"
             android:textColor="@color/text_white"
             />
+
+        <!--empty cart message-->
         <TextView
             android:id="@+id/empty_cart_msg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
             android:paddingTop="40dp"
             android:textSize="20dp"
             android:text="@string/empty_cart_msg"
             android:visibility="gone"
             />
+
+        <!--cart listview-->
         <ListView
             android:id="@+id/cart_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:layout_gravity="start"
             android:choiceMode="singleChoice"
-            android:background="#ffffff"/>
+            android:background="@color/background_white"/>
+
+        <!--coupon & rewards heading -->
         <RelativeLayout
             android:id="@+id/coupons_rewards_layout"
             style="@style/DrawerStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:background="@color/background_extra_light_gray">
             <TextView
                 style="@style/DrawerStyle"
@@ -56,50 +61,55 @@
                 android:layout_alignParentRight="true"
                 android:textColor="@color/text_blue"
                 />
-            <LinearLayout
-                android:id="@+id/coupon_editing_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/coupons_rewards_value"
-                android:visibility="gone">
-                <EditText
-                    android:id="@+id/coupon_code"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/coupon_code_hint"
-                    android:inputType="number"
-                    android:imeOptions="actionDone"
-                    android:maxLength="10"/>
-                <Button
-                    android:id="@+id/coupon_code_add_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/add"/>
-            </LinearLayout>
-            <LinearLayout
-                android:id="@+id/coupon_list_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/coupon_editing_layout"
-                android:visibility="gone">
-                <TextView
-                    android:id="@+id/coupon_code_existing"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-                <Button
-                    android:id="@+id/coupon_code_delete_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/remove"/>
-            </LinearLayout>
         </RelativeLayout>
+        <!--add coupon-->
+        <RelativeLayout
+            android:id="@+id/coupon_addition_layout"
+            style="@style/DrawerStyle"
+            android:layout_width="match_parent"
+            android:background="@color/background_extra_light_gray"
+            android:visibility="gone">
+            <EditText
+                android:id="@+id/coupon_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_gravity="center_vertical"
+                android:hint="@string/coupon_code_hint"
+                android:inputType="number"
+                android:imeOptions="actionDone"
+                android:maxLength="10"/>
+            <Button
+                android:id="@+id/coupon_add_button"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="center_vertical"
+                android:text="@string/add"
+                android:textSize="14dp"
+                android:fontFamily="sans-serif"
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                />
+        </RelativeLayout>
+        <!-- listview of existing coupons -->
+        <ListView
+            android:id="@+id/coupon_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@color/background_extra_light_gray"
+            android:visibility="gone"/>
+
+
+        <!--shipping info-->
         <RelativeLayout
             android:id="@+id/cart_shipping_layout"
             style="@style/DrawerStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
             android:background="@color/background_light_gray">
             <TextView
                 style="@style/DrawerStyle"
@@ -118,12 +128,13 @@
                 android:paddingBottom="0dp"
                 />
         </RelativeLayout>
+
+        <!--subtotal-->
         <RelativeLayout
             android:id="@+id/cart_subtotal_layout"
             style="@style/DrawerStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
             android:background="@color/background_light_gray">
             <TextView
                 style="@style/DrawerStyle"
@@ -141,11 +152,12 @@
                 android:paddingBottom="2dp"
                 />
         </RelativeLayout>
+
+        <!--checkout button-->
         <TextView
             android:id="@+id/action_checkout"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_gravity="bottom"
             android:gravity="center"
             android:text="@string/proceed_to_checkout"
             android:paddingTop="10dp"
@@ -153,6 +165,8 @@
             android:textSize="24dp"
             android:textColor="@color/text_white"
             android:background="@color/background_red_submission"/>
+
+
     </com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
     <RelativeLayout
         android:id="@+id/cart_progress_overlay"
