--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -202,7 +202,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:hint="1"
-            app:maxQuantity="9"
+            maxQuantity="10"
             app:popupWidth="120dp"/>
         <Button
             android:id="@+id/add_to_cart"
