--- a/app/src/main/res/layout/store_fragment_nomap.xml
+++ b/app/src/main/res/layout/store_fragment_nomap.xml
@@ -8,7 +8,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:padding="6dp"
-        android:hint="Search field placeholder"/>
+        android:inputType="textPostalAddress"
+        android:imeOptions="actionSearch"
+        android:singleLine="true"
+        android:hint="@string/search"/>
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
