--- a/app/src/main/res/layout/list_view_row.xml
+++ b/app/src/main/res/layout/list_view_row.xml
@@ -16,10 +16,15 @@
         />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="325dp"
         android:layout_height="wrap_content"
         android:text="New Text"
-        android:id="@+id/rowItemText"
-        android:layout_weight="0.05" />
+        android:id="@+id/rowItemText" />
+
+    <ImageButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listOptions"
+        android:src="@drawable/ic_action_navigation_more_vert"/>
 
 </LinearLayout>
