--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -43,11 +43,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:paddingLeft="16dp"
+                android:paddingLeft="6dp"
                 android:paddingRight="16dp"
                 android:src="@drawable/ic_menu_white"/>
             <TextView
-                android:id="@+id/header"
+                android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -77,7 +77,7 @@
                 android:textSize="18sp"
                 android:textColor="@android:color/white"/>
             <ImageView
-                android:id="@+id/search_icon"
+                android:id="@+id/option_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
