--- a/app/src/main/res/layout/hack_item.xml
+++ b/app/src/main/res/layout/hack_item.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="1dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
     android:gravity="center"
     android:background="#ffffffff"
     android:maxLines="1"
