--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -95,6 +95,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|right"
                 android:textSize="18sp"
+                android:maxLength="4"
                 app:maxQuantity="10"
                 app:popupWidth="120dp"/>
 
