--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay
+    <LinearLayout
         android:id="@+id/cart_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -167,7 +167,7 @@
             android:background="@color/background_red_submission"/>
 
 
-    </com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
+    </LinearLayout>
     <RelativeLayout
         android:id="@+id/cart_progress_overlay"
         android:layout_width="match_parent"
