--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent" >
 
-<com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay
+<LinearLayout
     android:id="@+id/checkout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -167,7 +167,7 @@
             />
     </RelativeLayout>
 
-</com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
+</LinearLayout>
 
 <!-- progress whirly -->
 <RelativeLayout
