--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-<com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay
+<LinearLayout
     android:id="@+id/confirmation"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -61,7 +61,7 @@
     />
 
 
-</com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
+</LinearLayout>
 
 <!-- progress whirly -->
 <RelativeLayout
