--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:id="@+id/login_fragment">
 
-    <com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay
+    <LinearLayout
         android:id="@+id/login_fragment_content"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -48,7 +48,7 @@
             </FrameLayout>
         </LinearLayout>
     </TabHost>
-    </com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
+    </LinearLayout>
     <RelativeLayout
         android:id="@+id/login_progress_overlay"
         android:layout_width="match_parent"
