--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -28,6 +28,7 @@
             android:gravity="center_horizontal"
             android:paddingTop="40dp"
             android:textSize="20dp"
+            android:background="@color/background_white"
             android:text="@string/empty_cart_msg"
             android:visibility="gone"
             />
