--- a/app/src/main/res/layout/store_fragment_map.xml
+++ b/app/src/main/res/layout/store_fragment_map.xml
@@ -12,7 +12,7 @@
         android:inputType="textPostalAddress"
         android:imeOptions="actionSearch"
         android:singleLine="true"
-        android:hint="@string/search"/>
+        android:hint="@string/store_search_hint"/>
     <com.google.android.gms.maps.MapView
         android:id="@+id/map"
         android:layout_width="fill_parent"
