--- a/app/src/main/res/layout/store_fragment_nomap.xml
+++ b/app/src/main/res/layout/store_fragment_nomap.xml
@@ -11,7 +11,7 @@
         android:inputType="textPostalAddress"
         android:imeOptions="actionSearch"
         android:singleLine="true"
-        android:hint="@string/search"/>
+        android:hint="@string/store_search_hint"/>
     <ListView
         android:id="@+id/list"
         android:layout_width="match_parent"
