--- a/app/src/main/res/layout/list_view_row.xml
+++ b/app/src/main/res/layout/list_view_row.xml
@@ -19,6 +19,7 @@
         android:layout_width="325dp"
         android:layout_height="wrap_content"
         android:text="New Text"
+        android:textStyle="bold"
         android:id="@+id/rowItemText" />
 
     <ImageButton
